# yt-dlp-api

./: .sops.yaml  Cargo.toml  flake.nix  result
.github/workflows/: build.yml  cache.yml
argocd/: application.yaml
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml
k8s/secrets/: ghcr-pull.sops.yaml  ts.sops.yaml
src/: main.rs
